--- a/部署准备清单.md
+++ b/部署准备清单.md
@@ -257,11 +257,13 @@ DOMAIN=
 ### 1. Google Search Console（必需）
 - [x] **注册地址**：https://search.google.com/search-console
 - [x] **验证网站所有权**（通过 DNS 验证）
-- [ ] **提交 sitemap.xml**（网站部署后提交）
+- [x] **提交 sitemap.xml**
 
 **已配置：**
-- 网站：xk-truck.cn
-- 状态：✅ 已验证，数据处理中
+- 域名资源：xk-truck.cn（已验证）
+- URL 前缀资源：https://xk-truck.cn（已验证）
+- Sitemap：✅ 已提交 sitemap-index.xml
+- 状态：✅ 等待 Google 索引（通常 1-3 天）
 
 ### 2. Bing Webmaster Tools（推荐）
 - [ ] **注册地址**：https://www.bing.com/webmasters
@@ -409,14 +411,14 @@ DOMAIN=
 6. 测试全流程
 
 ### SEO/GEO 配置
-7. 创建 robots.txt 和 sitemap.xml
-8. 提交网站到 Google Search Console
+7. ✅ 创建 robots.txt 和 sitemap.xml（已完成）
+8. ✅ 提交网站到 Google Search Console（已验证）
 9. 提交网站到 Bing Webmaster Tools
-10. 配置 Schema.org 结构化数据
+10. ✅ 配置 Schema.org 结构化数据（已完成）
 
 ### 动态关键词（方案 C）
-11. 配置 Google Cloud 服务账号
+11. 配置 Google Cloud 服务账号（参考 `Google-Cloud-GSC配置指南.md`）
 12. 在 Supabase 创建 SEO 相关表
 13. 配置 GitHub Secrets
-14. 部署 GitHub Actions 工作流
+14. ✅ 部署 GitHub Actions 工作流（已创建 `.github/workflows/seo-auto-update.yml`）
 15. 测试自动更新流程
