feat: add project implementation guide and redesign favicon with truck headlamp

--- a/项目总览.md
+++ b/项目总览.md
@@ -107,7 +107,7 @@
 | Cloudflare DNS | ✅ 完成 | 域名已接入 |
 | Cloudflare Pages | ✅ 完成 | 前端已部署 |
 | SSL 证书 | ✅ 完成 | 自动配置 |
-| R2 存储桶 | ✅ 完成 | 产品图片存储 |
+| R2 存储桶 | ⏸️ 备用 | 目前图片使用 Shopify CDN |
 
 ---
 
@@ -117,6 +117,8 @@
 
 | 任务 | 说明 | 预计工时 |
 |------|------|----------|
+| **Cloudflare Pages 环境变量** | 配置 Supabase URL/Key，使网站能读取产品数据 | 10 分钟 |
+| **Supabase 知识库表** | 创建 knowledge_base 表（RAG 用） | 10 分钟 |
 | **Cloudflare Worker 后端** | AI 客服 API、询盘处理、邮件通知 | 4-6 小时 |
 | **AI 客服对话功能** | 前端对接 Worker API，实现真实对话 | 2-3 小时 |
 | **询盘表单功能** | 表单提交、邮件通知、数据存储 | 2-3 小时 |
@@ -126,6 +128,7 @@
 
 | 任务 | 说明 | 预计工时 |
 |------|------|----------|
+| **其他品牌产品同步** | 同步 SCANIA/MAN/IVECO 等品牌产品到 Supabase | 1-2 小时 |
 | WhatsApp Business API | Meta 开发者验证、Webhook 配置 | 3-4 小时 |
 | 后台管理功能对接 | 连接真实数据，实现 CRUD | 4-6 小时 |
 | Google Analytics 4 | 流量统计分析 | 1 小时 |
@@ -135,8 +138,11 @@
 
 | 任务 | 说明 | 预计工时 |
 |------|------|----------|
+| **博客/新闻功能** | 静态 Markdown 博客，提升 SEO 内容更新频率 | 2-3 小时 |
 | Google Cloud 服务账号 | SEO 自动化 API 访问 | 1-2 小时 |
 | GitHub Secrets 配置 | SEO 工作流所需密钥 | 0.5 小时 |
+| Cloudflare Deploy Hook | 自动重建触发器 | 10 分钟 |
+| Supabase SEO 表 | 创建 page_seo/keyword_performance 等表 | 20 分钟 |
 | 多语言支持 | 中文/西班牙语等 | 4-6 小时 |
 | 产品对比功能 | 多产品对比 | 2-3 小时 |
 | 收藏夹功能 | 产品收藏 | 2-3 小时 |
