fix: ensure favicon.svg is deployed

--- a/部署准备清单.md
+++ b/部署准备清单.md
@@ -52,9 +52,9 @@
 
 
 ### 2. Supabase
-- [ ] **Project URL** - 格式：`https://xxxxx.supabase.co`
-- [ ] **Anon Key** - 公开密钥，用于前端
-- [ ] **Service Role Key** - 私密密钥，用于后端
+- [x] **Project URL** - 格式：`https://xxxxx.supabase.co`
+- [x] **Anon Key** - 公开密钥，用于前端
+- [x] **Service Role Key** - 私密密钥，用于后端
 - 🔗 创建项目：https://supabase.com/dashboard/projects
 - 🔗 获取 Keys：项目 → Settings → API
 
@@ -70,7 +70,7 @@
 
 
 ### 3. Resend
-- [ ] **API Key** - 用于发送邮件通知
+- [x] **API Key** - 用于发送邮件通知
 - 🔗 获取地址：https://resend.com/api-keys
 
 **已创建：**
@@ -79,7 +79,7 @@
 - API Key：re_jf9cgopc_LXyEDqAR7tPjxmEYRti8nazh
 
 ### 4. DeepSeek（AI 大模型）
-- [ ] **DeepSeek API Key** - 格式：`sk-...`
+- [x] **DeepSeek API Key** - 格式：`sk-...`
 - 🔗 注册地址：https://platform.deepseek.com
 - 🔗 获取 API Key：https://platform.deepseek.com/api_keys
 
@@ -179,7 +179,7 @@ All products are ADB-certified with OEM quality standards.
 ```
 
 ### 4. 知识库内容（用于 AI 客服）
-- [ ] **常见问题 FAQ**（英文）
+- [x] **常见问题 FAQ**（英文）- 已导入初始 FAQ
 - [ ] **产品详细介绍** - 从 xklamp.com 同步
 - [ ] **公司优势、资质**
 - [ ] **付款方式、交货期**
@@ -403,12 +403,12 @@ DOMAIN=
 准备好以上信息后，即可开始部署：
 
 ### 基础部署
-1. 配置 Cloudflare 域名
-2. 部署前端到 Cloudflare Pages
-3. 部署后端 Worker
-4. 导入知识库到 Supabase
-5. 配置 WhatsApp Webhook
-6. 测试全流程
+1. ✅ 配置 Cloudflare 域名
+2. ✅ 部署前端到 Cloudflare Pages
+3. ✅ 部署后端 Worker（https://xk-truck-api.harry-zhang592802.workers.dev）
+4. ✅ 导入知识库到 Supabase（初始 FAQ 已导入）
+5. ⏸️ 配置 WhatsApp Webhook（暂停，需海外手机验证）
+6. ⏳ 测试全流程
 
 ### SEO/GEO 配置
 7. ✅ 创建 robots.txt 和 sitemap.xml（已完成）
