docs: update project overview - blog completed

--- a/项目总览.md
+++ b/项目总览.md
@@ -138,7 +138,7 @@
 
 | 任务 | 说明 | 预计工时 |
 |------|------|----------|
-| **博客/新闻功能** | 静态 Markdown 博客，提升 SEO 内容更新频率 | 2-3 小时 |
+| **博客/新闻功能** | 静态 Markdown 博客，提升 SEO 内容更新频率 | ✅ 已完成 |
 | Google Cloud 服务账号 | SEO 自动化 API 访问 | 1-2 小时 |
 | GitHub Secrets 配置 | SEO 工作流所需密钥 | 0.5 小时 |
 | Cloudflare Deploy Hook | 自动重建触发器 | 10 分钟 |
