--- a/实施指南.md
+++ b/实施指南.md
@@ -1,152 +1,221 @@
 # XKTRUCK 项目实施指南
 
-本文档记录项目的技术实施细节、操作步骤和设计意图，供后续维护和学习参考。
+本文档记录项目的**具体操作步骤**，每一步都说明**做什么、怎么做、为什么这样做**。
 
 ---
 
-## 一、项目架构概述
+## 一、添加博客文章
 
-### 技术栈
+### 做什么
+在网站上发布一篇新的博客文章。
 
-| 层级 | 技术 | 用途 |
-|------|------|------|
-| **前端** | Astro + TailwindCSS | 静态网站生成，SEO 友好 |
-| **后端 API** | Cloudflare Workers | 边缘计算，全球低延迟 |
-| **数据库** | Supabase (PostgreSQL) | 数据存储，实时订阅 |
-| **AI** | DeepSeek API | 智能客服对话 |
-| **邮件** | Resend | 询盘通知邮件 |
-| **部署** | Cloudflare Pages + GitHub | 自动化 CI/CD |
+### 怎么做
 
-### 架构图
-
-```
-用户访问
-    ↓
-Cloudflare CDN (全球边缘节点)
-    ↓
-┌─────────────────────────────────────────┐
-│  前端 (Astro)                            │
-│  - 静态页面 (产品、博客、关于我们)         │
-│  - 动态组件 (AI 客服、联系表单)            │
-└─────────────────────────────────────────┘
-    ↓ API 请求
-┌─────────────────────────────────────────┐
-│  Cloudflare Worker                       │
-│  - /api/chat (AI 对话)                   │
-│  - /api/inquiry (询盘提交)               │
-│  - /api/whatsapp/webhook (WhatsApp)      │
-└─────────────────────────────────────────┘
-    ↓
-┌─────────────────────────────────────────┐
-│  Supabase                                │
-│  - 产品数据                              │
-│  - 询盘记录                              │
-│  - 对话历史                              │
-│  - 知识库                                │
-└─────────────────────────────────────────┘
-```
-
----
-
-## 二、环境配置
-
-### 2.1 多环境设计
-
-**文件**: `xk-truck-worker/wrangler.toml`
-
-```toml
-# 默认配置
-[vars]
-CORS_ORIGIN = "https://xk-truck.cn"
-
-# 生产环境
-[env.production]
-vars = { CORS_ORIGIN = "https://xk-truck.cn" }
-
-# 开发环境
-[env.development]
-vars = { CORS_ORIGIN = "*" }
-```
-
-**设计意图**:
-- **生产环境**: CORS 只允许 `xk-truck.cn`，防止其他网站盗用 API
-- **开发环境**: CORS 允许所有来源，方便本地 `localhost` 调试
-
-**部署命令**:
-```bash
-# 部署到默认环境（推荐）
-wrangler deploy --env=""
-
-# 部署到生产环境（会创建新的 Worker）
-wrangler deploy --env=production
-```
-
-### 2.2 密钥管理
-
-**原则**: 敏感信息不写入代码，通过 `wrangler secret` 管理
+**第 1 步**：在 `xk-truck-frontend/src/content/blog/` 目录下创建新的 `.md` 文件
 
 ```bash
-# 设置密钥（交互式输入，不会显示在终端）
-wrangler secret put SUPABASE_URL
-wrangler secret put SUPABASE_SERVICE_KEY
-wrangler secret put DEEPSEEK_API_KEY
-wrangler secret put RESEND_API_KEY
-wrangler secret put NOTIFY_EMAIL
-
-# WhatsApp 相关（待配置）
-wrangler secret put WHATSAPP_PHONE_NUMBER_ID
-wrangler secret put WHATSAPP_ACCESS_TOKEN
-wrangler secret put WHATSAPP_VERIFY_TOKEN
+# 文件名用英文，用短横线分隔单词
+# 例如：how-to-choose-truck-mirrors.md
 ```
 
-**设计意图**:
-- 密钥存储在 Cloudflare 的安全存储中
-- 代码仓库不包含任何敏感信息
-- 不同环境可以使用不同的密钥
+**第 2 步**：在文件开头添加元数据（frontmatter）
 
----
-
-## 三、前端开发
-
-### 3.1 博客功能
-
-**目录结构**:
-```
-src/
-├── content/
-│   ├── config.ts          # 内容集合配置
-│   └── blog/               # 博客文章 (Markdown)
-│       ├── article-1.md
-│       └── article-2.md
-└── pages/
-    └── blog/
-        ├── index.astro     # 博客列表页
-        └── [...slug].astro # 博客详情页（动态路由）
-```
-
-**设计意图**:
-- 使用 Astro Content Collections 管理博客
-- Markdown 文件便于编写和版本控制
-- 静态生成，SEO 友好
-- 支持 Featured 文章标记
-
-**添加新文章**:
 ```markdown
 ---
-title: "文章标题"
-description: "文章描述（用于 SEO）"
+title: "How to Choose Truck Mirrors"
+description: "A complete guide to selecting the right mirrors for your heavy truck"
 pubDate: 2025-12-12
 author: "XKTRUCK Team"
-tags: ["truck-parts", "maintenance"]
+tags: ["mirrors", "guide", "truck-parts"]
 featured: false
 ---
-
-文章正文内容...
 ```
 
-### 3.2 导航栏配置
+| 字段 | 说明 | 必填 |
+|------|------|------|
+| title | 文章标题，显示在页面和搜索结果 | ✅ |
+| description | 文章描述，用于 SEO 和列表预览 | ✅ |
+| pubDate | 发布日期，格式 YYYY-MM-DD | ✅ |
+| author | 作者名称 | ✅ |
+| tags | 标签数组，用于分类 | ✅ |
+| featured | 是否为精选文章，显示在首页 | ❌ |
 
-**文件**: `src/components/Header.astro`
+**第 3 步**：在 `---` 下方写文章正文（Markdown 格式）
+
+```markdown
+## Introduction
+
+Your article content here...
+
+## Section 1
+
+More content...
+```
+
+**第 4 步**：提交并推送
+
+```bash
+git add -A
+git commit -m "blog: add article about truck mirrors"
+git push
+```
+
+推送后 Cloudflare Pages 会自动部署，约 1-2 分钟后文章上线。
+
+### 为什么这样做
+- **Markdown 格式**：便于编写，支持版本控制
+- **frontmatter 元数据**：Astro 自动读取生成页面和 SEO 信息
+- **Git 推送自动部署**：无需手动操作，减少出错
+
+---
+
+## 二、部署 Worker（后端 API）
+
+### 做什么
+将后端代码更新到 Cloudflare 服务器。
+
+### 怎么做
+
+**第 1 步**：打开终端，进入 Worker 目录
+
+```bash
+cd d:\github\funNovels\TruckB2B\xk-truck-worker
+```
+
+**第 2 步**：执行部署命令
+
+```bash
+wrangler deploy --env=""
+```
+
+**第 3 步**：等待部署完成，看到类似输出表示成功
+
+```
+Uploaded xk-truck-api (5.06 sec)
+Deployed xk-truck-api triggers (2.01 sec)
+  https://xk-truck-api.harry-zhang592802.workers.dev
+```
+
+### 常见问题
+
+**问题 1**：提示 `Multiple environments are defined`
+```bash
+# 解决：加上 --env="" 参数
+wrangler deploy --env=""
+```
+
+**问题 2**：提示 `fetch failed`
+```bash
+# 原因：网络不稳定
+# 解决：重新执行命令
+wrangler deploy --env=""
+```
+
+**问题 3**：提示 `No matching export for import`
+```bash
+# 原因：代码中导入的函数名和导出的不一致
+# 解决：检查 import 语句和对应文件的 export 语句
+```
+
+### 为什么这样做
+- **`--env=""`**：使用默认环境配置，部署到原有的 Worker
+- **不用 `--env=production`**：会创建新的 Worker，导致 API 地址变化
+- **Worker 不自动部署**：避免代码有问题时影响线上
+
+---
+
+## 三、添加 Worker 密钥
+
+### 做什么
+配置 API 密钥等敏感信息，不写入代码。
+
+### 怎么做
+
+**第 1 步**：进入 Worker 目录
+
+```bash
+cd d:\github\funNovels\TruckB2B\xk-truck-worker
+```
+
+**第 2 步**：执行添加密钥命令
+
+```bash
+wrangler secret put WHATSAPP_ACCESS_TOKEN
+```
+
+**第 3 步**：在提示后输入密钥值（不会显示在屏幕上）
+
+```
+Enter a secret value: ********
+```
+
+**第 4 步**：看到成功提示
+
+```
+🌀 Creating the secret for the Worker "xk-truck-api"
+✨ Success! Uploaded secret WHATSAPP_ACCESS_TOKEN
+```
+
+### 当前已配置的密钥
+
+| 密钥名 | 用途 | 状态 |
+|--------|------|------|
+| SUPABASE_URL | 数据库地址 | ✅ 已配置 |
+| SUPABASE_SERVICE_KEY | 数据库密钥 | ✅ 已配置 |
+| DEEPSEEK_API_KEY | AI 接口密钥 | ✅ 已配置 |
+| RESEND_API_KEY | 邮件服务密钥 | ✅ 已配置 |
+| NOTIFY_EMAIL | 通知邮箱 | ✅ 已配置 |
+| WHATSAPP_PHONE_NUMBER_ID | WhatsApp 号码 ID | ⏳ 待配置 |
+| WHATSAPP_ACCESS_TOKEN | WhatsApp 访问令牌 | ⏳ 待配置 |
+| WHATSAPP_VERIFY_TOKEN | Webhook 验证令牌 | ⏳ 待配置 |
+
+### 为什么这样做
+- **不写入代码**：密钥不会出现在 GitHub，防止泄露
+- **Cloudflare 安全存储**：加密存储，只有 Worker 运行时能读取
+- **交互式输入**：输入时不显示，防止旁人看到
+
+---
+
+## 四、在 Supabase 执行 SQL
+
+### 做什么
+创建数据库表或修改表结构。
+
+### 怎么做
+
+**第 1 步**：打开 Supabase Dashboard
+```
+https://supabase.com/dashboard
+```
+
+**第 2 步**：选择项目 → 左侧菜单点击「SQL Editor」
+
+**第 3 步**：点击「New query」创建新查询
+
+**第 4 步**：复制 SQL 文件内容粘贴进去
+
+例如创建 WhatsApp 表，复制 `xk-truck-worker/sql/whatsapp-tables.sql` 的内容
+
+**第 5 步**：点击「Run」执行
+
+**第 6 步**：看到绿色提示「Success」表示执行成功
+
+### 为什么这样做
+- **SQL Editor**：可视化界面，便于检查和执行
+- **SQL 文件版本控制**：表结构变更有记录，可追溯
+
+---
+
+## 五、修改导航栏
+
+### 做什么
+在网站顶部导航栏添加或修改链接。
+
+### 怎么做
+
+**第 1 步**：打开文件 `xk-truck-frontend/src/components/Header.astro`
+
+**第 2 步**：找到 `navLinks` 数组（约第 2-8 行）
 
 ```javascript
 const navLinks = [
@@ -158,257 +227,215 @@ const navLinks = [
 ];
 ```
 
-**设计意图**: 集中管理导航链接，便于维护
-
----
-
-## 四、后端 API 开发
-
-### 4.1 Worker 路由结构
-
-**文件**: `xk-truck-worker/src/index.js`
+**第 3 步**：添加或修改链接
 
 ```javascript
-// 路由映射
-/api/inquiry          → handleInquiry()      // 询盘提交
-/api/chat             → handleChat()         // AI 对话
-/api/settings         → handleSettings()     // 系统设置
-/api/admin/*          → handleAdmin()        // 后台管理
-/api/whatsapp/webhook → handleWhatsApp()     // WhatsApp
-/api/health           → 健康检查
+// 添加新链接
+{ href: '/new-page', label: 'New Page' },
+
+// 修改现有链接
+{ href: '/products', label: 'Our Products' },  // 改了 label
 ```
 
-**设计意图**:
-- 单一入口，统一路由
-- 模块化 handler，职责分离
-- 统一 CORS 处理
-
-### 4.2 WhatsApp 集成
-
-**文件**: `xk-truck-worker/src/handlers/whatsapp.js`
-
-**功能流程**:
-```
-客户发送 WhatsApp 消息
-    ↓
-Meta 服务器调用 Webhook (POST /api/whatsapp/webhook)
-    ↓
-Worker 解析消息内容
-    ↓
-存储消息到 Supabase (whatsapp_messages 表)
-    ↓
-调用 DeepSeek AI 生成回复
-    ↓
-通过 Meta Graph API 发送回复
-    ↓
-存储 AI 回复到数据库
-```
-
-**设计意图**:
-- 所有对话记录自动保存，便于后续分析
-- AI 自动回复减少人工成本
-- 支持在后台管理系统查看对话
-
-**Webhook 验证**:
-```javascript
-// Meta 会发送 GET 请求验证 Webhook
-if (mode === 'subscribe' && token === env.WHATSAPP_VERIFY_TOKEN) {
-  return new Response(challenge, { status: 200 });
-}
-```
-
----
-
-## 五、数据库设计
-
-### 5.1 WhatsApp 相关表
-
-**文件**: `xk-truck-worker/sql/whatsapp-tables.sql`
-
-```sql
--- 对话表
-CREATE TABLE whatsapp_conversations (
-  id UUID PRIMARY KEY,
-  phone_number VARCHAR(20) UNIQUE,  -- 客户手机号
-  contact_name VARCHAR(100),         -- 客户名称
-  status VARCHAR(20),                -- active/archived/blocked
-  last_message TEXT,                 -- 最后一条消息（预览）
-  last_message_at TIMESTAMPTZ,       -- 最后消息时间
-  tags TEXT[],                       -- 标签（如 VIP、潜在客户）
-  notes TEXT                         -- 内部备注
-);
-
--- 消息表
-CREATE TABLE whatsapp_messages (
-  id UUID PRIMARY KEY,
-  conversation_id UUID REFERENCES whatsapp_conversations(id),
-  direction VARCHAR(10),             -- incoming/outgoing
-  content TEXT,                      -- 消息内容
-  message_type VARCHAR(20),          -- text/image/document
-  is_ai_response BOOLEAN             -- 是否 AI 回复
-);
-```
-
-**设计意图**:
-- 对话和消息分离，便于查询
-- 支持标签和备注，便于客户管理
-- 记录 AI 回复标记，便于质量分析
-
----
-
-## 六、部署流程
-
-### 6.1 前端部署
-
-**自动部署**: 推送到 GitHub main 分支后，Cloudflare Pages 自动构建部署
+**第 4 步**：保存并推送
 
 ```bash
 git add -A
-git commit -m "feat: add new feature"
+git commit -m "update navigation links"
 git push
 ```
 
-**手动部署**:
-```bash
-cd xk-truck-frontend
-npm run build
-# 然后在 Cloudflare Pages 手动触发部署
+### 为什么这样做
+- **集中管理**：所有导航链接在一个数组，便于维护
+- **自动渲染**：修改数组后，页面自动更新
+
+---
+
+## 六、修改后台管理导航
+
+### 做什么
+在后台管理系统添加新的菜单项。
+
+### 怎么做
+
+**第 1 步**：打开文件 `xk-truck-frontend/src/layouts/AdminLayout.astro`
+
+**第 2 步**：找到 `navItems` 数组（约第 14-21 行）
+
+```javascript
+const navItems = [
+  { id: 'dashboard', name: 'Dashboard', href: '/admin/dashboard', icon: 'chart' },
+  { id: 'inquiries', name: 'Inquiries', href: '/admin/inquiries', icon: 'mail' },
+  { id: 'products', name: 'Products', href: '/admin/products', icon: 'box' },
+  { id: 'conversations', name: 'Web Chat', href: '/admin/conversations', icon: 'chat' },
+  { id: 'whatsapp', name: 'WhatsApp', href: '/admin/whatsapp', icon: 'whatsapp' },
+  { id: 'settings', name: 'Settings', href: '/admin/settings', icon: 'cog' },
+];
 ```
 
-### 6.2 Worker 部署
+**第 3 步**：添加新菜单项
+
+```javascript
+{ id: 'new-page', name: 'New Page', href: '/admin/new-page', icon: 'chart' },
+```
+
+| 字段 | 说明 |
+|------|------|
+| id | 唯一标识，用于高亮当前页 |
+| name | 显示名称 |
+| href | 链接地址 |
+| icon | 图标名称（chart/mail/box/chat/whatsapp/cog） |
+
+**第 4 步**：如果需要新图标，在下方模板中添加对应的 SVG
+
+### 为什么这样做
+- **统一管理**：后台导航集中配置
+- **图标复用**：预定义的图标，保持风格一致
+
+---
+
+## 七、查看 Worker 日志
+
+### 做什么
+实时查看 API 的运行日志，用于调试。
+
+### 怎么做
+
+**第 1 步**：进入 Worker 目录
 
 ```bash
-cd xk-truck-worker
+cd d:\github\funNovels\TruckB2B\xk-truck-worker
+```
 
-# 登录 Cloudflare（首次需要）
-wrangler login
+**第 2 步**：执行日志命令
 
-# 部署到生产
-wrangler deploy --env=""
-
-# 查看日志
+```bash
 wrangler tail
 ```
 
-**设计意图**:
-- 前端通过 GitHub 自动部署，减少人工操作
-- Worker 手动部署，避免意外更新
+**第 3 步**：看到实时日志输出
+
+```
+GET /api/health - Ok @ 12/12/2025, 12:00:00 PM
+POST /api/chat - Ok @ 12/12/2025, 12:00:05 PM
+```
+
+**第 4 步**：按 `Ctrl + C` 停止查看
+
+### 为什么这样做
+- **实时调试**：立即看到请求和错误
+- **无需登录 Dashboard**：命令行直接查看
 
 ---
 
-## 七、SEO 配置
+## 八、本地开发调试
 
-### 7.1 Google Analytics 4
+### 做什么
+在本地运行网站进行开发和测试。
 
-**文件**: `src/layouts/Layout.astro`
+### 怎么做
 
-```html
-<!-- GA4 追踪代码 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-L4H3GET9H5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-L4H3GET9H5');
-</script>
+**前端开发**：
+
+```bash
+cd d:\github\funNovels\TruckB2B\xk-truck-frontend
+npm run dev
 ```
 
-**设计意图**:
-- 放在全局 Layout 中，所有页面自动加载
-- 追踪用户行为，分析流量来源
+打开浏览器访问 `http://localhost:4321`
 
-### 7.2 Sitemap
+**Worker 本地开发**：
 
-**配置**: `astro.config.mjs`
-
-```javascript
-import sitemap from '@astrojs/sitemap';
-
-export default defineConfig({
-  site: 'https://xk-truck.cn',
-  integrations: [sitemap()],
-});
+```bash
+cd d:\github\funNovels\TruckB2B\xk-truck-worker
+wrangler dev
 ```
 
-**设计意图**: 自动生成 sitemap，便于搜索引擎收录
+本地 API 地址 `http://localhost:8787`
+
+### 为什么这样做
+- **即时预览**：修改代码后自动刷新
+- **不影响线上**：本地测试，确认无误再部署
 
 ---
 
-## 八、常用命令速查
+## 九、提交代码到 GitHub
 
-### 开发
+### 做什么
+保存代码变更并同步到远程仓库。
 
-```bash
-# 前端开发
-cd xk-truck-frontend
-npm run dev                    # 启动开发服务器 (localhost:4321)
+### 怎么做
 
-# Worker 本地开发
-cd xk-truck-worker
-wrangler dev                   # 启动本地 Worker
-```
-
-### 部署
+**第 1 步**：添加所有变更
 
 ```bash
-# 前端（自动）
-git push                       # 推送后自动部署
-
-# Worker
-wrangler deploy --env=""       # 部署到生产
-wrangler tail                  # 查看实时日志
+git add -A
 ```
 
-### 密钥管理
+**第 2 步**：提交变更（写清楚做了什么）
 
 ```bash
-wrangler secret put KEY_NAME   # 添加密钥
-wrangler secret list           # 列出所有密钥
-wrangler secret delete KEY_NAME # 删除密钥
+git commit -m "feat: add whatsapp integration"
 ```
 
-### 数据库
+提交信息格式：
+- `feat:` 新功能
+- `fix:` 修复 bug
+- `docs:` 文档更新
+- `style:` 样式调整
+- `refactor:` 代码重构
+
+**第 3 步**：推送到 GitHub
 
 ```bash
-# 在 Supabase Dashboard 的 SQL Editor 中执行 SQL 文件
-# 或使用 Supabase CLI
-supabase db push
+git push
 ```
+
+### 为什么这样做
+- **版本控制**：可以回退到任意历史版本
+- **自动部署**：推送后前端自动部署
+- **协作基础**：多人开发的基础
 
 ---
 
-## 九、待完成任务
+## 十、CORS 是什么
 
-| 任务 | 状态 | 说明 |
-|------|------|------|
-| WhatsApp API 配置 | ⏳ 待配置 | 等 Meta 开发者账号验证 |
-| Bing Webmaster | ⏳ 待提交 | 等 GSC 审核完成后导入 |
-| 产品数据同步 | ⏳ 待完成 | 等源网站数据就绪 |
-| 知识库完善 | ⏳ 待完成 | 提升 AI 回复质量 |
+### 概念
+CORS（跨域资源共享）控制**哪些网站可以调用你的 API**。
 
----
+### 当前配置
 
-## 十、故障排查
+```toml
+# 文件：xk-truck-worker/wrangler.toml
+[vars]
+CORS_ORIGIN = "https://xk-truck.cn"
+```
 
-### Worker 部署失败
+### 效果
 
-**问题**: `fetch failed` 错误
-**原因**: 网络不稳定
-**解决**: 重试部署命令
+| 请求来源 | 能否调用 API |
+|----------|-------------|
+| https://xk-truck.cn | ✅ 可以 |
+| https://其他网站.com | ❌ 被浏览器拦截 |
+| http://localhost:4321 | ❌ 被浏览器拦截 |
 
-### 导入错误
+### 本地开发怎么办
 
-**问题**: `No matching export for import`
-**原因**: 函数名不匹配
-**解决**: 检查 lib 文件的导出名称，确保 import 和 export 一致
+方法 1：临时修改 `wrangler.toml`
+```toml
+CORS_ORIGIN = "*"  # 允许所有来源
+```
 
-### CORS 错误
+方法 2：使用开发环境部署
+```bash
+wrangler deploy --env=development
+```
 
-**问题**: 浏览器报 CORS 错误
-**原因**: API 不允许当前域名访问
-**解决**: 
-- 开发环境使用 `--env=development`
-- 或在 `wrangler.toml` 添加允许的域名
+**注意**：上线前要改回 `https://xk-truck.cn`
+
+### 为什么要限制
+- **安全**：防止其他网站盗用你的 API
+- **防滥用**：只有你的网站能调用
 
 ---
 
