--- a/实施指南.md
+++ b/实施指南.md
@@ -1,441 +1,557 @@
 # XKTRUCK 项目实施指南
 
-本文档记录项目的**具体操作步骤**，每一步都说明**做什么、怎么做、为什么这样做**。
+本文档记录**整个项目从零搭建的完整步骤**，包括每一步的具体操作和设计意图。
 
 ---
 
-## 一、添加博客文章
+# 第一部分：项目初始化
+
+## 1.1 创建 GitHub 仓库
 
 ### 做什么
-在网站上发布一篇新的博客文章。
+创建代码仓库，用于版本控制和自动部署。
+
+### 怎么做
+1. 登录 https://github.com
+2. 点击右上角 `+` → `New repository`
+3. 填写仓库名：`TruckB2B`
+4. 选择 `Private`（私有仓库）
+5. 点击 `Create repository`
+
+### 为什么
+- **版本控制**：记录所有代码变更，可随时回退
+- **自动部署**：Cloudflare Pages 监听仓库变化自动部署
+- **协作基础**：多人开发时合并代码
+
+---
+
+## 1.2 创建前端项目（Astro）
+
+### 做什么
+搭建网站前端框架。
+
+### 怎么做
+```bash
+# 1. 创建项目
+npm create astro@latest xk-truck-frontend
+
+# 2. 选择模板：Empty
+# 3. 安装依赖：Yes
+# 4. TypeScript：No
+# 5. 进入目录
+cd xk-truck-frontend
+
+# 6. 安装 TailwindCSS
+npx astro add tailwind
+
+# 7. 安装 Sitemap 插件（SEO 用）
+npx astro add sitemap
+```
+
+### 为什么选 Astro
+- **静态生成**：页面预渲染成 HTML，加载快
+- **SEO 友好**：搜索引擎可直接抓取内容
+- **零 JS 默认**：不需要交互的页面不加载 JS
+- **组件化**：可复用的 `.astro` 组件
+
+---
+
+## 1.3 创建后端项目（Cloudflare Worker）
+
+### 做什么
+搭建 API 服务，处理表单提交、AI 对话等。
+
+### 怎么做
+```bash
+# 1. 创建项目
+npm create cloudflare@latest xk-truck-worker
+
+# 2. 选择模板：Hello World
+# 3. TypeScript：No
+# 4. 进入目录
+cd xk-truck-worker
+
+# 5. 登录 Cloudflare
+wrangler login
+```
+
+### 为什么选 Cloudflare Worker
+- **全球边缘部署**：300+ 节点，用户访问延迟低
+- **免费额度高**：每天 10 万次请求免费
+- **无需服务器**：不用管运维、扩容
+- **冷启动快**：毫秒级响应
+
+---
+
+## 1.4 创建数据库（Supabase）
+
+### 做什么
+存储产品数据、询盘记录、对话历史等。
+
+### 怎么做
+1. 访问 https://supabase.com
+2. 点击 `Start your project`
+3. 用 GitHub 登录
+4. 点击 `New project`
+5. 填写项目名：`xk-truck`
+6. 设置数据库密码（记下来）
+7. 选择区域：`Southeast Asia (Singapore)`
+8. 点击 `Create new project`
+
+### 获取连接信息
+1. 进入项目 → 左侧 `Settings` → `API`
+2. 复制 `Project URL`（即 SUPABASE_URL）
+3. 复制 `service_role` 密钥（即 SUPABASE_SERVICE_KEY）
+
+### 为什么选 Supabase
+- **PostgreSQL**：成熟稳定的关系型数据库
+- **免费额度**：500MB 存储，足够初期使用
+- **实时订阅**：数据变化可推送到前端
+- **REST API**：自动生成，无需写后端
+
+---
+
+## 1.5 申请 AI 服务（DeepSeek）
+
+### 做什么
+获取 AI 对话能力，用于智能客服。
+
+### 怎么做
+1. 访问 https://platform.deepseek.com
+2. 注册账号
+3. 进入控制台 → `API Keys`
+4. 点击 `Create new API key`
+5. 复制密钥（只显示一次）
+
+### 为什么选 DeepSeek
+- **中文能力强**：理解中文语境
+- **价格便宜**：约 GPT-4 的 1/10
+- **响应快**：国内访问延迟低
+
+---
+
+## 1.6 申请邮件服务（Resend）
+
+### 做什么
+发送询盘通知邮件。
+
+### 怎么做
+1. 访问 https://resend.com
+2. 用 GitHub 登录
+3. 进入 `API Keys`
+4. 点击 `Create API Key`
+5. 复制密钥
+
+### 为什么选 Resend
+- **免费额度**：每月 3000 封
+- **开发者友好**：API 简单
+- **送达率高**：不容易进垃圾箱
+
+---
+
+# 第二部分：配置部署环境
+
+## 2.1 配置 Cloudflare Pages（前端自动部署）
+
+### 做什么
+让前端代码推送到 GitHub 后自动部署。
+
+### 怎么做
+1. 登录 https://dash.cloudflare.com
+2. 左侧菜单 → `Workers & Pages`
+3. 点击 `Create` → `Pages` → `Connect to Git`
+4. 选择 GitHub 仓库 `TruckB2B`
+5. 配置构建设置：
+   - **Project name**: `xk-truck`
+   - **Production branch**: `main`
+   - **Build command**: `npm run build`
+   - **Build output directory**: `dist`
+   - **Root directory**: `xk-truck-frontend`
+6. 点击 `Save and Deploy`
+
+### 为什么
+- **自动化**：推送代码后 1-2 分钟自动上线
+- **预览环境**：每个 PR 自动生成预览链接
+- **回滚方便**：一键回退到任意版本
+
+---
+
+## 2.2 配置 Worker 密钥
+
+### 做什么
+将敏感信息（API 密钥）安全存储。
+
+### 怎么做
+```bash
+cd xk-truck-worker
+
+# 数据库
+wrangler secret put SUPABASE_URL
+# 输入：https://xxx.supabase.co
+
+wrangler secret put SUPABASE_SERVICE_KEY
+# 输入：eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+
+# AI 服务
+wrangler secret put DEEPSEEK_API_KEY
+# 输入：sk-xxx
+
+# 邮件服务
+wrangler secret put RESEND_API_KEY
+# 输入：re_xxx
+
+# 通知邮箱
+wrangler secret put NOTIFY_EMAIL
+# 输入：your@email.com
+```
+
+### 为什么用 secret 而不是写在代码里
+- **安全**：密钥不会出现在 GitHub
+- **加密存储**：Cloudflare 加密保存
+- **环境隔离**：不同环境可用不同密钥
+
+---
+
+## 2.3 配置自定义域名
+
+### 做什么
+让网站使用自己的域名访问。
 
 ### 怎么做
 
-**第 1 步**：在 `xk-truck-frontend/src/content/blog/` 目录下创建新的 `.md` 文件
+**前端域名**：
+1. Cloudflare Pages → 项目 → `Custom domains`
+2. 点击 `Set up a custom domain`
+3. 输入 `xk-truck.cn`
+4. 按提示添加 DNS 记录
+
+**API 域名**（可选）：
+1. Workers & Pages → 项目 → `Triggers` → `Custom Domains`
+2. 添加 `api.xk-truck.cn`
+
+### 为什么
+- **品牌形象**：专业的域名更可信
+- **SEO**：自有域名积累权重
+
+---
+
+## 2.4 创建数据库表
+
+### 做什么
+在 Supabase 创建存储数据的表结构。
+
+### 怎么做
+1. 打开 Supabase Dashboard → SQL Editor
+2. 执行以下 SQL：
+
+```sql
+-- 产品表
+CREATE TABLE products (
+  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+  name VARCHAR(200) NOT NULL,
+  description TEXT,
+  category VARCHAR(50),
+  brand VARCHAR(50),
+  oe_number VARCHAR(100),
+  price_range VARCHAR(50),
+  images TEXT[],
+  specifications JSONB,
+  created_at TIMESTAMPTZ DEFAULT NOW()
+);
+
+-- 询盘表
+CREATE TABLE inquiries (
+  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+  name VARCHAR(100) NOT NULL,
+  email VARCHAR(100) NOT NULL,
+  company VARCHAR(200),
+  phone VARCHAR(50),
+  subject VARCHAR(200),
+  message TEXT NOT NULL,
+  product_id UUID REFERENCES products(id),
+  product_name VARCHAR(200),
+  source VARCHAR(50) DEFAULT 'website',
+  status VARCHAR(20) DEFAULT 'new',
+  created_at TIMESTAMPTZ DEFAULT NOW()
+);
+
+-- 对话表
+CREATE TABLE conversations (
+  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+  session_id VARCHAR(100) NOT NULL,
+  role VARCHAR(20) NOT NULL,
+  message TEXT NOT NULL,
+  is_ai BOOLEAN DEFAULT FALSE,
+  metadata JSONB,
+  created_at TIMESTAMPTZ DEFAULT NOW()
+);
+
+-- 设置表
+CREATE TABLE settings (
+  key VARCHAR(50) PRIMARY KEY,
+  value JSONB,
+  updated_at TIMESTAMPTZ DEFAULT NOW()
+);
+
+-- 插入默认设置
+INSERT INTO settings (key, value) VALUES (
+  'ai_config',
+  '{"ai_enabled": true, "welcome_message": "Hello! How can I help you today?"}'
+);
+```
+
+### 为什么这样设计
+- **UUID 主键**：分布式友好，不暴露数据量
+- **JSONB 类型**：灵活存储结构化数据
+- **时间戳**：记录创建时间，便于排序
+
+---
+
+# 第三部分：开发核心功能
+
+## 3.1 创建 API 路由（Worker）
+
+### 做什么
+定义后端 API 端点。
+
+### 文件：`xk-truck-worker/src/index.js`
+
+```javascript
+import { handleInquiry } from './handlers/inquiry.js';
+import { handleChat } from './handlers/chat.js';
+
+export default {
+  async fetch(request, env) {
+    const url = new URL(request.url);
+    const path = url.pathname;
+
+    // CORS 预检
+    if (request.method === 'OPTIONS') {
+      return new Response(null, {
+        headers: {
+          'Access-Control-Allow-Origin': env.CORS_ORIGIN,
+          'Access-Control-Allow-Methods': 'GET, POST, OPTIONS',
+          'Access-Control-Allow-Headers': 'Content-Type',
+        }
+      });
+    }
+
+    let response;
+    
+    // 路由分发
+    if (path === '/api/inquiry' && request.method === 'POST') {
+      response = await handleInquiry(request, env);
+    } else if (path === '/api/chat' && request.method === 'POST') {
+      response = await handleChat(request, env);
+    } else {
+      response = new Response('Not Found', { status: 404 });
+    }
+
+    // 添加 CORS 头
+    response.headers.set('Access-Control-Allow-Origin', env.CORS_ORIGIN);
+    return response;
+  }
+};
+```
+
+### 为什么这样设计
+- **单一入口**：所有请求经过 `fetch`，便于统一处理
+- **模块化**：每个功能独立文件，便于维护
+- **CORS 处理**：允许前端跨域调用
+
+---
+
+## 3.2 实现询盘提交
+
+### 做什么
+处理联系表单提交，保存到数据库并发邮件通知。
+
+### 文件：`xk-truck-worker/src/handlers/inquiry.js`
+
+```javascript
+import { createClient } from '@supabase/supabase-js';
+import { Resend } from 'resend';
+
+export async function handleInquiry(request, env) {
+  const data = await request.json();
+  
+  // 1. 保存到数据库
+  const supabase = createClient(env.SUPABASE_URL, env.SUPABASE_SERVICE_KEY);
+  await supabase.from('inquiries').insert({
+    name: data.name,
+    email: data.email,
+    company: data.company,
+    message: data.message,
+  });
+
+  // 2. 发送邮件通知
+  const resend = new Resend(env.RESEND_API_KEY);
+  await resend.emails.send({
+    from: 'XKTRUCK <noreply@xk-truck.cn>',
+    to: env.NOTIFY_EMAIL,
+    subject: `New Inquiry from ${data.name}`,
+    html: `<p>${data.message}</p>`
+  });
+
+  return new Response(JSON.stringify({ success: true }));
+}
+```
+
+### 为什么
+- **双重保障**：数据库存储 + 邮件通知
+- **异步处理**：不阻塞用户操作
+
+---
+
+## 3.3 实现 AI 客服
+
+### 做什么
+接收用户消息，调用 AI 生成回复。
+
+### 文件：`xk-truck-worker/src/handlers/chat.js`
+
+```javascript
+export async function handleChat(request, env) {
+  const { message, sessionId } = await request.json();
+  
+  // 1. 获取对话历史
+  const history = await getHistory(env, sessionId);
+  
+  // 2. 调用 DeepSeek API
+  const response = await fetch('https://api.deepseek.com/chat/completions', {
+    method: 'POST',
+    headers: {
+      'Authorization': `Bearer ${env.DEEPSEEK_API_KEY}`,
+      'Content-Type': 'application/json'
+    },
+    body: JSON.stringify({
+      model: 'deepseek-chat',
+      messages: [
+        { role: 'system', content: 'You are a helpful assistant for XKTRUCK...' },
+        ...history,
+        { role: 'user', content: message }
+      ]
+    })
+  });
+
+  const data = await response.json();
+  const reply = data.choices[0].message.content;
+
+  // 3. 保存对话记录
+  await saveConversation(env, sessionId, message, reply);
+
+  return new Response(JSON.stringify({ reply }));
+}
+```
+
+### 为什么
+- **上下文记忆**：传入历史对话，AI 理解上下文
+- **系统提示词**：定义 AI 角色和行为规范
+- **记录保存**：便于后续分析和改进
+
+---
+
+# 第四部分：SEO 配置
+
+## 4.1 配置 Google Analytics 4
+
+### 做什么
+追踪网站访问数据。
+
+### 怎么做
+1. 访问 https://analytics.google.com
+2. 创建账号和媒体资源
+3. 获取衡量 ID（G-XXXXXXXX）
+4. 在 `src/layouts/Layout.astro` 的 `<head>` 中添加：
+
+```html
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L4H3GET9H5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-L4H3GET9H5');
+</script>
+```
+
+### 为什么
+- **流量分析**：了解用户来源和行为
+- **转化追踪**：衡量询盘效果
+
+---
+
+## 4.2 提交 Google Search Console
+
+### 做什么
+让 Google 收录网站。
+
+### 怎么做
+1. 访问 https://search.google.com/search-console
+2. 添加资源 → 输入域名
+3. 验证所有权（DNS 或 HTML 文件）
+4. 提交 Sitemap：`https://xk-truck.cn/sitemap-index.xml`
+
+### 为什么
+- **加速收录**：主动告知 Google 网站存在
+- **监控问题**：发现抓取错误
+
+---
+
+# 第五部分：日常运维
+
+## 5.1 部署前端
 
 ```bash
-# 文件名用英文，用短横线分隔单词
-# 例如：how-to-choose-truck-mirrors.md
-```
-
-**第 2 步**：在文件开头添加元数据（frontmatter）
-
-```markdown
----
-title: "How to Choose Truck Mirrors"
-description: "A complete guide to selecting the right mirrors for your heavy truck"
-pubDate: 2025-12-12
-author: "XKTRUCK Team"
-tags: ["mirrors", "guide", "truck-parts"]
-featured: false
----
-```
-
-| 字段 | 说明 | 必填 |
-|------|------|------|
-| title | 文章标题，显示在页面和搜索结果 | ✅ |
-| description | 文章描述，用于 SEO 和列表预览 | ✅ |
-| pubDate | 发布日期，格式 YYYY-MM-DD | ✅ |
-| author | 作者名称 | ✅ |
-| tags | 标签数组，用于分类 | ✅ |
-| featured | 是否为精选文章，显示在首页 | ❌ |
-
-**第 3 步**：在 `---` 下方写文章正文（Markdown 格式）
-
-```markdown
-## Introduction
-
-Your article content here...
-
-## Section 1
-
-More content...
-```
-
-**第 4 步**：提交并推送
-
-```bash
+# 推送代码后自动部署
 git add -A
-git commit -m "blog: add article about truck mirrors"
+git commit -m "feat: add new feature"
 git push
 ```
 
-推送后 Cloudflare Pages 会自动部署，约 1-2 分钟后文章上线。
-
-### 为什么这样做
-- **Markdown 格式**：便于编写，支持版本控制
-- **frontmatter 元数据**：Astro 自动读取生成页面和 SEO 信息
-- **Git 推送自动部署**：无需手动操作，减少出错
-
----
-
-## 二、部署 Worker（后端 API）
-
-### 做什么
-将后端代码更新到 Cloudflare 服务器。
-
-### 怎么做
-
-**第 1 步**：打开终端，进入 Worker 目录
+## 5.2 部署 Worker
 
 ```bash
-cd d:\github\funNovels\TruckB2B\xk-truck-worker
-```
-
-**第 2 步**：执行部署命令
-
-```bash
+cd xk-truck-worker
 wrangler deploy --env=""
 ```
 
-**第 3 步**：等待部署完成，看到类似输出表示成功
-
-```
-Uploaded xk-truck-api (5.06 sec)
-Deployed xk-truck-api triggers (2.01 sec)
-  https://xk-truck-api.harry-zhang592802.workers.dev
-```
-
-### 常见问题
-
-**问题 1**：提示 `Multiple environments are defined`
-```bash
-# 解决：加上 --env="" 参数
-wrangler deploy --env=""
-```
-
-**问题 2**：提示 `fetch failed`
-```bash
-# 原因：网络不稳定
-# 解决：重新执行命令
-wrangler deploy --env=""
-```
-
-**问题 3**：提示 `No matching export for import`
-```bash
-# 原因：代码中导入的函数名和导出的不一致
-# 解决：检查 import 语句和对应文件的 export 语句
-```
-
-### 为什么这样做
-- **`--env=""`**：使用默认环境配置，部署到原有的 Worker
-- **不用 `--env=production`**：会创建新的 Worker，导致 API 地址变化
-- **Worker 不自动部署**：避免代码有问题时影响线上
-
----
-
-## 三、添加 Worker 密钥
-
-### 做什么
-配置 API 密钥等敏感信息，不写入代码。
-
-### 怎么做
-
-**第 1 步**：进入 Worker 目录
-
-```bash
-cd d:\github\funNovels\TruckB2B\xk-truck-worker
-```
-
-**第 2 步**：执行添加密钥命令
-
-```bash
-wrangler secret put WHATSAPP_ACCESS_TOKEN
-```
-
-**第 3 步**：在提示后输入密钥值（不会显示在屏幕上）
-
-```
-Enter a secret value: ********
-```
-
-**第 4 步**：看到成功提示
-
-```
-🌀 Creating the secret for the Worker "xk-truck-api"
-✨ Success! Uploaded secret WHATSAPP_ACCESS_TOKEN
-```
-
-### 当前已配置的密钥
-
-| 密钥名 | 用途 | 状态 |
-|--------|------|------|
-| SUPABASE_URL | 数据库地址 | ✅ 已配置 |
-| SUPABASE_SERVICE_KEY | 数据库密钥 | ✅ 已配置 |
-| DEEPSEEK_API_KEY | AI 接口密钥 | ✅ 已配置 |
-| RESEND_API_KEY | 邮件服务密钥 | ✅ 已配置 |
-| NOTIFY_EMAIL | 通知邮箱 | ✅ 已配置 |
-| WHATSAPP_PHONE_NUMBER_ID | WhatsApp 号码 ID | ⏳ 待配置 |
-| WHATSAPP_ACCESS_TOKEN | WhatsApp 访问令牌 | ⏳ 待配置 |
-| WHATSAPP_VERIFY_TOKEN | Webhook 验证令牌 | ⏳ 待配置 |
-
-### 为什么这样做
-- **不写入代码**：密钥不会出现在 GitHub，防止泄露
-- **Cloudflare 安全存储**：加密存储，只有 Worker 运行时能读取
-- **交互式输入**：输入时不显示，防止旁人看到
-
----
-
-## 四、在 Supabase 执行 SQL
-
-### 做什么
-创建数据库表或修改表结构。
-
-### 怎么做
-
-**第 1 步**：打开 Supabase Dashboard
-```
-https://supabase.com/dashboard
-```
-
-**第 2 步**：选择项目 → 左侧菜单点击「SQL Editor」
-
-**第 3 步**：点击「New query」创建新查询
-
-**第 4 步**：复制 SQL 文件内容粘贴进去
-
-例如创建 WhatsApp 表，复制 `xk-truck-worker/sql/whatsapp-tables.sql` 的内容
-
-**第 5 步**：点击「Run」执行
-
-**第 6 步**：看到绿色提示「Success」表示执行成功
-
-### 为什么这样做
-- **SQL Editor**：可视化界面，便于检查和执行
-- **SQL 文件版本控制**：表结构变更有记录，可追溯
-
----
-
-## 五、修改导航栏
-
-### 做什么
-在网站顶部导航栏添加或修改链接。
-
-### 怎么做
-
-**第 1 步**：打开文件 `xk-truck-frontend/src/components/Header.astro`
-
-**第 2 步**：找到 `navLinks` 数组（约第 2-8 行）
-
-```javascript
-const navLinks = [
-  { href: '/', label: 'Home' },
-  { href: '/products', label: 'Products' },
-  { href: '/blog', label: 'Blog' },
-  { href: '/about', label: 'About Us' },
-  { href: '/contact', label: 'Contact' },
-];
-```
-
-**第 3 步**：添加或修改链接
-
-```javascript
-// 添加新链接
-{ href: '/new-page', label: 'New Page' },
-
-// 修改现有链接
-{ href: '/products', label: 'Our Products' },  // 改了 label
-```
-
-**第 4 步**：保存并推送
-
-```bash
-git add -A
-git commit -m "update navigation links"
-git push
-```
-
-### 为什么这样做
-- **集中管理**：所有导航链接在一个数组，便于维护
-- **自动渲染**：修改数组后，页面自动更新
-
----
-
-## 六、修改后台管理导航
-
-### 做什么
-在后台管理系统添加新的菜单项。
-
-### 怎么做
-
-**第 1 步**：打开文件 `xk-truck-frontend/src/layouts/AdminLayout.astro`
-
-**第 2 步**：找到 `navItems` 数组（约第 14-21 行）
-
-```javascript
-const navItems = [
-  { id: 'dashboard', name: 'Dashboard', href: '/admin/dashboard', icon: 'chart' },
-  { id: 'inquiries', name: 'Inquiries', href: '/admin/inquiries', icon: 'mail' },
-  { id: 'products', name: 'Products', href: '/admin/products', icon: 'box' },
-  { id: 'conversations', name: 'Web Chat', href: '/admin/conversations', icon: 'chat' },
-  { id: 'whatsapp', name: 'WhatsApp', href: '/admin/whatsapp', icon: 'whatsapp' },
-  { id: 'settings', name: 'Settings', href: '/admin/settings', icon: 'cog' },
-];
-```
-
-**第 3 步**：添加新菜单项
-
-```javascript
-{ id: 'new-page', name: 'New Page', href: '/admin/new-page', icon: 'chart' },
-```
-
-| 字段 | 说明 |
-|------|------|
-| id | 唯一标识，用于高亮当前页 |
-| name | 显示名称 |
-| href | 链接地址 |
-| icon | 图标名称（chart/mail/box/chat/whatsapp/cog） |
-
-**第 4 步**：如果需要新图标，在下方模板中添加对应的 SVG
-
-### 为什么这样做
-- **统一管理**：后台导航集中配置
-- **图标复用**：预定义的图标，保持风格一致
-
----
-
-## 七、查看 Worker 日志
-
-### 做什么
-实时查看 API 的运行日志，用于调试。
-
-### 怎么做
-
-**第 1 步**：进入 Worker 目录
-
-```bash
-cd d:\github\funNovels\TruckB2B\xk-truck-worker
-```
-
-**第 2 步**：执行日志命令
+## 5.3 查看日志
 
 ```bash
 wrangler tail
 ```
 
-**第 3 步**：看到实时日志输出
+## 5.4 添加博客文章
 
-```
-GET /api/health - Ok @ 12/12/2025, 12:00:00 PM
-POST /api/chat - Ok @ 12/12/2025, 12:00:05 PM
-```
-
-**第 4 步**：按 `Ctrl + C` 停止查看
-
-### 为什么这样做
-- **实时调试**：立即看到请求和错误
-- **无需登录 Dashboard**：命令行直接查看
+在 `src/content/blog/` 创建 `.md` 文件，推送即可。
 
 ---
 
-## 八、本地开发调试
+# 附录：项目文件结构
 
-### 做什么
-在本地运行网站进行开发和测试。
-
-### 怎么做
-
-**前端开发**：
-
-```bash
-cd d:\github\funNovels\TruckB2B\xk-truck-frontend
-npm run dev
 ```
-
-打开浏览器访问 `http://localhost:4321`
-
-**Worker 本地开发**：
-
-```bash
-cd d:\github\funNovels\TruckB2B\xk-truck-worker
-wrangler dev
+TruckB2B/
+├── xk-truck-frontend/          # 前端项目
+│   ├── src/
+│   │   ├── components/         # 可复用组件
+│   │   ├── layouts/            # 页面布局
+│   │   ├── pages/              # 页面路由
+│   │   └── content/blog/       # 博客文章
+│   ├── astro.config.mjs        # Astro 配置
+│   └── package.json
+│
+├── xk-truck-worker/            # 后端 API
+│   ├── src/
+│   │   ├── handlers/           # 请求处理器
+│   │   └── lib/                # 工具函数
+│   ├── sql/                    # 数据库脚本
+│   ├── wrangler.toml           # Worker 配置
+│   └── package.json
+│
+├── 项目总览.md                  # 项目状态总览
+├── 实施指南.md                  # 本文档
+└── README.md
 ```
-
-本地 API 地址 `http://localhost:8787`
-
-### 为什么这样做
-- **即时预览**：修改代码后自动刷新
-- **不影响线上**：本地测试，确认无误再部署
-
----
-
-## 九、提交代码到 GitHub
-
-### 做什么
-保存代码变更并同步到远程仓库。
-
-### 怎么做
-
-**第 1 步**：添加所有变更
-
-```bash
-git add -A
-```
-
-**第 2 步**：提交变更（写清楚做了什么）
-
-```bash
-git commit -m "feat: add whatsapp integration"
-```
-
-提交信息格式：
-- `feat:` 新功能
-- `fix:` 修复 bug
-- `docs:` 文档更新
-- `style:` 样式调整
-- `refactor:` 代码重构
-
-**第 3 步**：推送到 GitHub
-
-```bash
-git push
-```
-
-### 为什么这样做
-- **版本控制**：可以回退到任意历史版本
-- **自动部署**：推送后前端自动部署
-- **协作基础**：多人开发的基础
-
----
-
-## 十、CORS 是什么
-
-### 概念
-CORS（跨域资源共享）控制**哪些网站可以调用你的 API**。
-
-### 当前配置
-
-```toml
-# 文件：xk-truck-worker/wrangler.toml
-[vars]
-CORS_ORIGIN = "https://xk-truck.cn"
-```
-
-### 效果
-
-| 请求来源 | 能否调用 API |
-|----------|-------------|
-| https://xk-truck.cn | ✅ 可以 |
-| https://其他网站.com | ❌ 被浏览器拦截 |
-| http://localhost:4321 | ❌ 被浏览器拦截 |
-
-### 本地开发怎么办
-
-方法 1：临时修改 `wrangler.toml`
-```toml
-CORS_ORIGIN = "*"  # 允许所有来源
-```
-
-方法 2：使用开发环境部署
-```bash
-wrangler deploy --env=development
-```
-
-**注意**：上线前要改回 `https://xk-truck.cn`
-
-### 为什么要限制
-- **安全**：防止其他网站盗用你的 API
-- **防滥用**：只有你的网站能调用
 
 ---
 
