docs: add directory paths and detailed steps to implementation guide

--- a/实施指南.md
+++ b/实施指南.md
@@ -31,20 +31,32 @@
 搭建网站前端框架。
 
 ### 怎么做
+
+> **在哪里执行命令**：打开 VS Code 终端（快捷键 `Ctrl + `` `），或 Windows PowerShell
+
+**第 1 步**：在项目根目录下创建前端项目
 ```bash
-# 1. 创建项目
+# 在 d:\github\funNovels\TruckB2B 目录下执行
 npm create astro@latest xk-truck-frontend
+```
+执行后会出现交互式选项：
+- 选择模板：`Empty`
+- 安装依赖：`Yes`
+- TypeScript：`No`
 
-# 2. 选择模板：Empty
-# 3. 安装依赖：Yes
-# 4. TypeScript：No
-# 5. 进入目录
+**第 2 步**：进入前端项目目录
+```bash
 cd xk-truck-frontend
+```
 
-# 6. 安装 TailwindCSS
+**第 3 步**：安装 TailwindCSS（样式框架）
+```bash
+# 在 d:\github\funNovels\TruckB2B\xk-truck-frontend 目录下执行
 npx astro add tailwind
+```
 
-# 7. 安装 Sitemap 插件（SEO 用）
+**第 4 步**：安装 Sitemap 插件（SEO 用）
+```bash
 npx astro add sitemap
 ```
 
@@ -62,18 +74,27 @@ npx astro add sitemap
 搭建 API 服务，处理表单提交、AI 对话等。
 
 ### 怎么做
+
+**第 1 步**：回到项目根目录，创建 Worker 项目
 ```bash
-# 1. 创建项目
+# 在 d:\github\funNovels\TruckB2B 目录下执行
 npm create cloudflare@latest xk-truck-worker
+```
+执行后会出现交互式选项：
+- 选择模板：`Hello World`
+- TypeScript：`No`
 
-# 2. 选择模板：Hello World
-# 3. TypeScript：No
-# 4. 进入目录
+**第 2 步**：进入 Worker 项目目录
+```bash
 cd xk-truck-worker
+```
 
-# 5. 登录 Cloudflare
+**第 3 步**：登录 Cloudflare 账号
+```bash
+# 在 d:\github\funNovels\TruckB2B\xk-truck-worker 目录下执行
 wrangler login
 ```
+执行后会自动打开浏览器，登录 Cloudflare 账号授权即可。
 
 ### 为什么选 Cloudflare Worker
 - **全球边缘部署**：300+ 节点，用户访问延迟低
@@ -182,28 +203,38 @@ wrangler login
 将敏感信息（API 密钥）安全存储。
 
 ### 怎么做
+
+> **在哪里执行命令**：在 `d:\github\funNovels\TruckB2B\xk-truck-worker` 目录下
+
+**第 1 步**：打开终端，进入 Worker 目录
 ```bash
-cd xk-truck-worker
+cd d:\github\funNovels\TruckB2B\xk-truck-worker
+```
 
-# 数据库
+**第 2 步**：逐个添加密钥（每个命令执行后会提示输入密钥值）
+```bash
+# 数据库地址
 wrangler secret put SUPABASE_URL
-# 输入：https://xxx.supabase.co
+# 提示输入时，粘贴：https://xxx.supabase.co
 
+# 数据库密钥
 wrangler secret put SUPABASE_SERVICE_KEY
-# 输入：eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+# 提示输入时，粘贴：eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
-# AI 服务
+# AI 服务密钥
 wrangler secret put DEEPSEEK_API_KEY
-# 输入：sk-xxx
+# 提示输入时，粘贴：sk-xxx
 
-# 邮件服务
+# 邮件服务密钥
 wrangler secret put RESEND_API_KEY
-# 输入：re_xxx
+# 提示输入时，粘贴：re_xxx
 
 # 通知邮箱
 wrangler secret put NOTIFY_EMAIL
-# 输入：your@email.com
+# 提示输入时，输入：your@email.com
 ```
+
+> **注意**：输入密钥时屏幕不会显示内容，这是正常的安全设计
 
 ### 为什么用 secret 而不是写在代码里
 - **安全**：密钥不会出现在 GitHub
@@ -501,29 +532,98 @@ export async function handleChat(request, env) {
 
 ## 5.1 部署前端
 
+### 做什么
+更新网站前端代码。
+
+### 怎么做
+
+> **在哪里执行命令**：在项目根目录 `d:\github\funNovels\TruckB2B` 下
+
 ```bash
-# 推送代码后自动部署
+# 第 1 步：添加所有变更
 git add -A
+
+# 第 2 步：提交变更（写清楚做了什么）
 git commit -m "feat: add new feature"
+
+# 第 3 步：推送到 GitHub（推送后自动部署）
 git push
 ```
 
+> **提交信息格式**：
+> - `feat:` 新功能
+> - `fix:` 修复 bug
+> - `docs:` 文档更新
+> - `style:` 样式调整
+
+---
+
 ## 5.2 部署 Worker
 
+### 做什么
+更新后端 API 代码。
+
+### 怎么做
+
+> **在哪里执行命令**：在 `d:\github\funNovels\TruckB2B\xk-truck-worker` 目录下
+
 ```bash
-cd xk-truck-worker
+# 第 1 步：进入 Worker 目录
+cd d:\github\funNovels\TruckB2B\xk-truck-worker
+
+# 第 2 步：部署到 Cloudflare
 wrangler deploy --env=""
 ```
 
+> **为什么加 `--env=""`**：使用默认环境配置，部署到原有的 Worker 地址
+
+---
+
 ## 5.3 查看日志
+
+### 做什么
+实时查看 API 运行日志，用于调试。
+
+### 怎么做
+
+> **在哪里执行命令**：在 `d:\github\funNovels\TruckB2B\xk-truck-worker` 目录下
 
 ```bash
 wrangler tail
 ```
 
+按 `Ctrl + C` 停止查看。
+
+---
+
 ## 5.4 添加博客文章
 
-在 `src/content/blog/` 创建 `.md` 文件，推送即可。
+### 做什么
+发布新的博客文章。
+
+### 怎么做
+
+**第 1 步**：在 `d:\github\funNovels\TruckB2B\xk-truck-frontend\src\content\blog\` 目录下创建新的 `.md` 文件
+
+**第 2 步**：文件开头添加元数据
+```markdown
+---
+title: "文章标题"
+description: "文章描述"
+pubDate: 2025-12-12
+author: "XKTRUCK Team"
+tags: ["tag1", "tag2"]
+---
+
+文章正文...
+```
+
+**第 3 步**：提交并推送
+```bash
+git add -A
+git commit -m "blog: add new article"
+git push
+```
 
 ---
 
