docs: add AI knowledge base configuration guide and SQL examples

--- a/实施指南.md
+++ b/实施指南.md
@@ -324,6 +324,21 @@ CREATE TABLE settings (
   updated_at TIMESTAMPTZ DEFAULT NOW()
 );
 
+-- 知识库表（AI 客服用）
+CREATE TABLE knowledge_base (
+  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+  title VARCHAR(200) NOT NULL,
+  content TEXT NOT NULL,
+  category VARCHAR(50),
+  metadata JSONB,
+  is_active BOOLEAN DEFAULT TRUE,
+  created_at TIMESTAMPTZ DEFAULT NOW(),
+  updated_at TIMESTAMPTZ DEFAULT NOW()
+);
+
+-- 为知识库内容创建全文搜索索引
+CREATE INDEX knowledge_base_content_idx ON knowledge_base USING GIN (to_tsvector('english', content));
+
 -- 插入默认设置
 INSERT INTO settings (key, value) VALUES (
   'ai_config',
@@ -479,6 +494,125 @@ export async function handleChat(request, env) {
 - **上下文记忆**：传入历史对话，AI 理解上下文
 - **系统提示词**：定义 AI 角色和行为规范
 - **记录保存**：便于后续分析和改进
+
+---
+
+## 3.4 配置 AI 知识库
+
+### 做什么
+让 AI 客服能够回答关于你公司和产品的具体问题。
+
+### 工作原理
+
+```
+用户提问："你们有沃尔沃 FH4 的大灯吗？"
+        ↓
+Worker 在知识库中搜索相关内容
+        ↓
+找到匹配的产品信息
+        ↓
+将产品信息 + 用户问题 一起发给 AI
+        ↓
+AI 根据知识库内容生成准确回答
+```
+
+### 怎么做
+
+**第 1 步**：在 Supabase 创建知识库表（如果还没创建）
+
+> **在哪里执行**：Supabase Dashboard → SQL Editor
+
+```sql
+-- 知识库表
+CREATE TABLE IF NOT EXISTS knowledge_base (
+  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
+  title VARCHAR(200) NOT NULL,
+  content TEXT NOT NULL,
+  category VARCHAR(50),
+  metadata JSONB,
+  is_active BOOLEAN DEFAULT TRUE,
+  created_at TIMESTAMPTZ DEFAULT NOW(),
+  updated_at TIMESTAMPTZ DEFAULT NOW()
+);
+
+-- 创建全文搜索索引
+CREATE INDEX IF NOT EXISTS knowledge_base_content_idx 
+ON knowledge_base USING GIN (to_tsvector('english', content));
+```
+
+**第 2 步**：添加知识库内容
+
+> **在哪里执行**：Supabase Dashboard → Table Editor → knowledge_base → Insert row
+
+**示例 1：公司介绍**
+```sql
+INSERT INTO knowledge_base (title, content, category) VALUES (
+  'Company Introduction',
+  'XKTRUCK (also known as XKLAMP) is a professional manufacturer of heavy truck parts located in China. We have a 35,000 square meter factory and produce headlamps, mirrors, and exterior parts for VOLVO, SCANIA, MERCEDES-BENZ, MAN, IVECO, RENAULT, DAF, and FORD trucks. All products are ADB certified and meet OEM quality standards.',
+  'company'
+);
+```
+
+**示例 2：产品信息**
+```sql
+INSERT INTO knowledge_base (title, content, category) VALUES (
+  'VOLVO FH4 Headlamp',
+  'We offer VOLVO FH4 LED Headlamps with OE number 21221129. Features: LED technology, ADB certified, direct fit replacement. Compatible with VOLVO FH4 2013-2020 and FM4 2013-2020. Available in left and right versions.',
+  'product'
+);
+```
+
+**示例 3：常见问题**
+```sql
+INSERT INTO knowledge_base (title, content, category) VALUES (
+  'Minimum Order Quantity',
+  'Our minimum order quantity (MOQ) varies by product. For most items, we can accommodate small trial orders starting from 5-10 pieces. For large quantity orders, we offer better pricing. Please contact us for specific product MOQ.',
+  'faq'
+);
+
+INSERT INTO knowledge_base (title, content, category) VALUES (
+  'Shipping and Delivery',
+  'We ship worldwide via sea freight, air freight, or express courier (DHL, FedEx, UPS). Standard delivery time is 15-30 days depending on destination. Express shipping is available for urgent orders. We handle all export documentation.',
+  'faq'
+);
+
+INSERT INTO knowledge_base (title, content, category) VALUES (
+  'Payment Methods',
+  'We accept T/T (bank transfer), PayPal, and Western Union. For new customers, we typically require 30% deposit before production and 70% before shipment. For established customers, we can discuss flexible payment terms.',
+  'faq'
+);
+
+INSERT INTO knowledge_base (title, content, category) VALUES (
+  'Quality and Warranty',
+  'All our products are ADB certified and manufactured to OEM specifications. We provide a 12-month warranty on all products. If any quality issues arise within the warranty period, we will replace the defective parts free of charge.',
+  'faq'
+);
+```
+
+**第 3 步**：测试知识库
+
+在网站的 AI 客服中测试以下问题：
+- "What products do you have for VOLVO?"
+- "What is your MOQ?"
+- "How long is the delivery time?"
+- "Do you have warranty?"
+
+### 知识库内容建议
+
+| 类别 | 建议内容 |
+|------|----------|
+| **company** | 公司介绍、工厂规模、认证资质 |
+| **product** | 每个主要产品的详细信息（OE号、适配车型、特点） |
+| **faq** | 常见问题：MOQ、付款方式、运费、交期、质保 |
+| **policy** | 退换货政策、售后服务 |
+
+### 为什么需要知识库
+
+| 没有知识库 | 有知识库 |
+|-----------|----------|
+| AI 只能给出通用回答 | AI 能回答具体产品问题 |
+| "请联系销售人员" | "我们有 VOLVO FH4 大灯，OE号 21221129..." |
+| 客户体验差 | 客户能快速获得信息 |
 
 ---
 
